syntax = "proto3";

option csharp_namespace = "Baka.Hipster.Burger.Shared.Protos";

package shared;

import "Protos/common.proto";

service UserProto {


  rpc ChangePassword (ChangePasswordRequest) returns (BoolResponse);
  rpc Add (FullUser) returns (IdMessage);
  rpc Delete (IdMessage) returns (BoolResponse);
  rpc CanDelete (IdMessage) returns (BoolResponse);
  rpc Update (UserMessage) returns (BoolResponse);
  rpc Get (IdMessage) returns (UserMessage);
  rpc GetAll (Empty) returns (UserMessages);
  rpc LogIn (UserLogin) returns (TokenMessage);
  rpc Register (FullUser) returns (BoolResponse);
}

message FullUser{
	UserMessage User = 1;
	string Password = 2;
}

message UserLogin{
	string Username = 1;
	string Password = 2;
}

message UserMessage {
	int32 Id = 1;
	string Username = 2;
	string Firstname = 3;
	string Lastname = 4;
	bool IsAdmin = 5;
}

message UserMessages{
	repeated UserMessage User = 1;
}

message TokenMessage{
	string Token = 1;
	UserMessage User = 2;
}

message ChangePasswordRequest{
	int32 Id = 1;
	string OldPassword = 2;
	string NewPassword = 3;
}
